--- a/styles.css
+++ b/styles.css
@@ -1,140 +1,129 @@
-.home {
-    align-items: flex-start;
-    background-color: var(--cararra);
-    display: flex;
-    height: 1024px;
-    padding: 0 185px;
-    width: 1440px;
+.e1_2 { 
+	overflow:hidden;
 }
-
-.home .header-contatiner {
-    height: 70px;
-    left: 185px;
-    position: fixed;
-    top: 22px;
-    width: 1000px;
-    z-index: 1;
+.e1_2 { 
+	background-color:rgba(242.00000077486038, 239.00000095367432, 233.00000131130219, 1);
+	width:100%;
+	height:100%;
+	position:absolute;
 }
-
-.home .title {
-    height: 30px;
-    left: 217px;
-    letter-spacing: 0;
-    position: fixed;
-    text-align: center;
-    top: 42px;
-    z-index: 2;
+.e3_3 { 
+	background-color:rgba(86.00000247359276, 78.00000295042992, 88.00000235438347, 1);
+	width:1000px;
+	height:70px;
+	position:absolute;
+	left:720px;
+	top:22px;
+	border-top-left-radius:5px;
+	border-top-right-radius:5px;
+	border-bottom-left-radius:5px;
+	border-bottom-right-radius:5px;
 }
-
-.home .collection-btn {
-    background-color: var(--shark);
-    border-radius: 5px;
-    cursor: pointer;
-    height: 40px;
-    left: 665px;
-    position: fixed;
-    top: 37px;
-    width: 100px;
-    z-index: 6;
+.MTG-Worth-Logo { 
+	color:rgba(242.00000077486038, 239.00000095367432, 233.00000131130219, 1);
+	width:134px;
+	height:30px;
+	position:absolute;
+	left:752px;
+	top:42px;
+	font-family:Kameron;
+	text-align:center;
+	font-size:24px;
+	letter-spacing:0;
 }
-
-.home .collection {
-    height: 23px;
-    left: 669px;
-    letter-spacing: 0;
-    position: fixed;
-    text-align: center;
-    top: 46px;
-    z-index: 9;
+.e3_5 { 
+	background-color:rgba(37.00000159442425, 38.0000015348196, 39.00000147521496, 0.5);
+	width:100px;
+	height:40px;
+	position:absolute;
+	left:1590px;
+	top:37px;
+	border-top-left-radius:5px;
+	border-top-right-radius:5px;
+	border-bottom-left-radius:5px;
+	border-bottom-right-radius:5px;
 }
-
-.home .decks-btn {
-    background-color: var(--shark);
-    border-radius: 5px;
-    cursor: pointer;
-    height: 40px;
-    left: 795px;
-    position: fixed;
-    top: 37px;
-    width: 100px;
-    z-index: 5;
+.e3_6 { 
+	background-color:rgba(37.00000159442425, 38.0000015348196, 39.00000147521496, 0.5);
+	width:100px;
+	height:40px;
+	position:absolute;
+	left:1460px;
+	top:37px;
+	border-top-left-radius:5px;
+	border-top-right-radius:5px;
+	border-bottom-left-radius:5px;
+	border-bottom-right-radius:5px;
 }
-
-.home .decks {
-    height: 23px;
-    left: 818px;
-    letter-spacing: 0;
-    position: fixed;
-    text-align: center;
-    top: 46px;
-    z-index: 8;
+.e3_7 { 
+	background-color:rgba(37.00000159442425, 38.0000015348196, 39.00000147521496, 0.5);
+	width:100px;
+	height:40px;
+	position:absolute;
+	left:1330px;
+	top:37px;
+	border-top-left-radius:5px;
+	border-top-right-radius:5px;
+	border-bottom-left-radius:5px;
+	border-bottom-right-radius:5px;
 }
-
-.home .register-btn {
-    background-color: var(--shark);
-    border-radius: 5px;
-    cursor: pointer;
-    height: 40px;
-    left: 925px;
-    position: fixed;
-    top: 37px;
-    z-index: 7;
+.e3_8 { 
+	background-color:rgba(37.00000159442425, 38.0000015348196, 39.00000147521496, 0.5);
+	width:100px;
+	height:40px;
+	position:absolute;
+	left:1200px;
+	top:37px;
+	border-top-left-radius:5px;
+	border-top-right-radius:5px;
+	border-bottom-left-radius:5px;
+	border-bottom-right-radius:5px;
 }
-
-.home .place {
-    height: 23px;
-    left: 936px;
-    letter-spacing: 0;
-    position: fixed;
-    text-align: center;
-    top: 46px;
-    z-index: 7;
+.e3_11 { 
+	color:rgba(242.00000077486038, 239.00000095367432, 233.00000131130219, 1);
+	width:76px;
+	height:23px;
+	position:absolute;
+	left:1471px;
+	top:46px;
+	font-family:Kameron;
+	text-align:center;
+	font-size:18px;
+	letter-spacing:0;
 }
-
-.home .login-btn {
-    background-color: var(--shark);
-    border-radius: 5px;
-    cursor: pointer;
-    height: 40px;
-    left: 1055px;
-    position: fixed;
-    top: 37px;
-    width: 100px;
-    z-index: 3;
+.e4_14 { 
+	color:rgba(242.00000077486038, 239.00000095367432, 233.00000131130219, 1);
+	width:55px;
+	height:23px;
+	position:absolute;
+	left:1353px;
+	top:46px;
+	font-family:Kameron;
+	text-align:center;
+	font-size:18px;
+	letter-spacing:0;
 }
-
-.home .login {
-    height: 23px;
-    left: 1079px;
-    letter-spacing: 0;
-    position: fixed;
-    text-align: center;
-    top: 46px;
-    z-index: 10;
+.e4_15 { 
+	color:rgba(242.00000077486038, 239.00000095367432, 233.00000131130219, 1);
+	width:92px;
+	height:23px;
+	position:absolute;
+	left:1204px;
+	top:46px;
+	font-family:Kameron;
+	text-align:center;
+	font-size:18px;
+	letter-spacing:0;
 }
-
-@import url("https://fonts.googleapis.com/css?family=Kameron:700");
-
-.screen a {
-    display: contents;
-    text-decoration: none;
-}
-
-.containter-center-horizontal {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    pointer-events: none;
-    width: 100%;
-}
-
-.containter-center-horizontal > * {
-    flex-shrink: 0;
-    pointer-events: auto;
-}
-
-.valign-text-middle {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.e3_10 { 
+	color:rgba(242.00000077486038, 239.00000095367432, 233.00000131130219, 1);
+	width:51px;
+	height:23px;
+	position:absolute;
+	left:1614px;
+	top:46px;
+	font-family:Kameron;
+	text-align:center;
+	font-size:18px;
+	letter-spacing:0;
 }
